--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   change_app_package_name: ^1.5.0
   rename: ^3.0.2
   fl_chart: ^1.1.1
+  http_parser: ^4.1.2
 
 dev_dependencies:
   flutter_test:
